# axiom-rag-engine

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  models.py  pyproject.toml  tasks.py  test_nodes.py
.github/workflows/: ci.yml  nightly-evals.yml  publish.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
evals/: README.md  _env.py  corpus_eval.py  download_beir.py  download_datasets.py  e2e_eval.py  embeddings.py  gate.py  make_paraphrases.py  retrieval_eval.py  semantic_verifier_eval.py
evals/baselines/: e2e-golden.json  retrieval-bm25.json  semantic-verifier-openrouter-free.json  semantic-verifier.json
evals/golden/: seed.jsonl
nodes/: semantic.py  synthesizer.py
src/axiom_engine/: cache.py  graph.py  main.py  marshalling.py  models.py  scoring.py  state.py
src/axiom_engine/api/: __init__.py  auth.py
src/axiom_engine/config/: __init__.py  observability.py
src/axiom_engine/nodes/: ranker.py  retriever.py  scorer.py  semantic.py  synthesizer.py  verification.py
src/axiom_engine/search/: tavily.py
src/axiom_engine/utils/: llm.py
src/axiom_engine/verifiers/: __init__.py  mechanical.py
src/axiom_rag_engine/: __main__.py  audit_store.py  cache.py  embeddings.py  graph.py  main.py  marshalling.py  models.py  scoring.py  state.py
src/axiom_rag_engine/api/: __init__.py  auth.py  sse.py
src/axiom_rag_engine/cli/: audit.py
src/axiom_rag_engine/config/: __init__.py  observability.py  settings.py
src/axiom_rag_engine/corpus/: __init__.py  ingest.py  store.py
src/axiom_rag_engine/nodes/: ranker.py  retriever.py  scorer.py  semantic.py  synthesizer.py  verification.py
src/axiom_rag_engine/search/: corpus_backend.py  tavily.py
src/axiom_rag_engine/utils/: audit.py  llm.py
src/axiom_rag_engine/verifiers/: __init__.py  mechanical.py
tests/: conftest.py
tests/unit/: test_corpus.py  test_corpus_backend.py  test_corpus_eval.py  test_corroboration.py  test_document_api.py  test_eval_gate.py  test_golden_seed.py  test_graph.py  test_hybrid_ranker.py  test_hybrid_retrieval.py  test_main.py  test_mechanical.py  test_models.py  test_nodes.py  test_operations.py  test_pipeline_nodes.py  test_retrieval_eval.py  test_sse.py  test_tavily.py  test_usage.py
