[project]
name = "axiom-engine"
version = "2.3.0"
description = "Axiom Engine System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3.0",
    "litellm>=1.82,<2.0",
    "langgraph>=1.1,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "slowapi>=0.1.9",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes (F), pycodestyle (E), isort (I)
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["axiom_engine"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Not strict — incremental adoption. Tighten per module as coverage grows.
warn_unused_ignores = true
warn_return_any = false
