[project]
name = "axiom-engine"
version = "2.3.0"
description = "Axiom Engine System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3.0",
    "litellm>=1.82,<2.0",
    "langgraph>=1.1,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "slowapi>=0.1.9",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.5.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-cov>=6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --cov=axiom_engine --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring a live Ollama instance (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "SIM", "UP", "RUF", "T20"]
ignore = ["E501", "RUF001", "RUF002"]  # E501: handled by ruff format; RUF001/2: intentional Unicode

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T20"]  # S101: assert is expected in pytest; T20: allow print()

[tool.ruff.lint.isort]
known-first-party = ["axiom_engine"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
strict = false  # Incremental adoption — tighten per module as coverage grows.

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "tavily.*",
    "slowapi.*",
    "cachetools.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["axiom_engine"]

[tool.coverage.report]
show_missing = true
fail_under = 70
